# sticklight-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-release.yaml
scripts/: .common  build  bumpversion.py  lint  manual-publish  publish  test
src/sticklight/: __init__.py  capture.py
src/sticklight_python/: __init__.py  auth.py  capture.py  consts.py
sticklight/: __init__.py  _post_event.py  auth.py  capture.py  context.py  errors.py  init.py
tests/: test_acapture.py  test_capture.py  util.py
