[project]
name = "sticklight-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gilad Barnea", email = "gilad@sticklight.io" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
